added more content

--- a/report/notes.tex
+++ b/report/notes.tex
@@ -148,6 +148,13 @@ If we assume that $\lambda_1$ is the dominant eigenvalue ($\lambda_1 > \lambda_2
 \ee
 This means that all we really need for the partition function is to find the dominant eigenvalue of the transfer matrix!
 
+\subsection{2-D Ising Model}
+In the 2-D case, the transfer matrix becomes a $2^N$x$2^N$ matrix.
+But the partition function is still defined as
+\be
+  Z = \text{Tr}[ \tk^N ]
+\ee
+If we had
 \bibliography{mybib}
 \bibliographystyle{unsrt}
 
